KAlarm Change Log

=== Version 3.12.0 (KDE Gear 25.12) --- 8 September 2025 ===
* If a recurrence is suppressed by work time/holidays/exception, suppress its sub-repetitions.
* Improvements and bug fixes to recurrence/work time/holidays calculations.

=== Version 3.11.3 (KDE Gear 25.08.2) --- 10 September 2025 ===
* In edit dialog, don't output high accuracy warning if start time is before now.

=== Version 3.11.2 (KDE Gear 25.08) --- 14 July 2025 ===
* Remove excess spacing in Preferences dialogue.

=== Version 3.11.1 (KDE Gear 25.04.3) --- 4 June 2025 ===
* Prevent message windows taking keyboard focus when they pop up.

=== Version 3.11.0 (KDE Gear 25.04) --- 18 March 2025 ===
* Implement audio backends as plugins to allow user selection.
* Clean up time spin box appearance in some styles, e.g. Oxygen.

=== Version 3.10.3 (KDE Gear 24.12.3) --- 13 February 2025 ===
* Fix KAlarm exiting before executing session restoration [KDE Bug 499859]

=== Version 3.10.2 (KDE Gear 24.12.2) --- 27 January 2025 ===
* Fix system tray showing blank KAlarm icon under XFCE [KDE Bug 498753]

=== Version 3.10.1 (KDE Gear 24.12.1) --- 2 January 2025 ===
* Show normal decorated alarm windows over full screen applications on X11.
* Fix Akonadi functionality not working.
* Make fade work each time a repeated sound alarm is played.
* Fix Edit Alarm dialogue error setting time if user's time zone is UTC [KDE Bug 497960]
* Fix build on FreeBSD if using MPV audio.

=== Version 3.10.0 (KDE Gear 24.12) --- 30 September 2024 ===
* Provide build option to use VLC or MPV to play sounds.
* Show all Run Mode options in Preferences dialogue. 
* Convert to Qt 6.5 QDateTime/QTimeZone changes.

=== Version 3.9.2 (KDE Gear 24.08.2) --- 26 September 2024 ===
* Fix crash if kernel alarm timers are supported.
* Fix Wake from Suspend not working when using RTC wake [KDE Bug 486187]
* Display audio error message immediately when using Try button while editing an alarm.